--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -9,7 +9,7 @@
 	<title>
 	Comments for Cassidy&#039;s 100 Days	</title>
 	<atom:link href="https://darknessflowers.github.io/Portfolio-test//comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://darknessflowers.github.io/Portfolio-test//</link>
+	<link>https://darknessflowers.github.io/Portfolio-test//</link>
 	<description>Just another WordPress site</description>
 	<lastBuildDate>Wed, 19 Aug 2020 07:37:31 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -24,7 +24,7 @@
 
 		<dc:creator><![CDATA[A WordPress Commenter]]></dc:creator>
 		<pubDate>Wed, 19 Aug 2020 07:37:31 +0000</pubDate>
-		<guid isPermaLink="false">https://darknessflowers.github.io/Portfolio-test//?p=1#comment-1</guid>
+		<guid isPermaLink="false">http://darknessflowers.github.io/Portfolio-test//?p=1#comment-1</guid>
 
 					<description><![CDATA[Hi, this is a comment.
 To get started with moderating, editing, and deleting comments, please visit the Comments screen in the dashboard.
