--- a/hello-world/feed/index.html
+++ b/hello-world/feed/index.html
@@ -24,7 +24,7 @@
 
 		<dc:creator><![CDATA[A WordPress Commenter]]></dc:creator>
 		<pubDate>Wed, 19 Aug 2020 07:37:31 +0000</pubDate>
-		<guid isPermaLink="false">https://darknessflowers.github.io/Portfolio-test//?p=1#comment-1</guid>
+		<guid isPermaLink="false">http://darknessflowers.github.io/Portfolio-test//?p=1#comment-1</guid>
 
 					<description><![CDATA[Hi, this is a comment.
 To get started with moderating, editing, and deleting comments, please visit the Comments screen in the dashboard.
