--- a/hello-world/feed/index.html
+++ b/hello-world/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments on: Hello world!	</title>
-	<atom:link href="https://darknessflowers.github.io/Portfolio-test/hello-world/feed/" rel="self" type="application/rss+xml" />
-	<link>https://darknessflowers.github.io/Portfolio-test/hello-world/</link>
+	<atom:link href="https://darknessflowers.github.io/portfoliotest/hello-world/feed/" rel="self" type="application/rss+xml" />
+	<link>https://darknessflowers.github.io/portfoliotest/hello-world/</link>
 	<description>Just another WordPress site</description>
 	<lastBuildDate>Wed, 19 Aug 2020 07:37:31 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -20,11 +20,11 @@
 	<item>
 		<title>
 		By: A WordPress Commenter		</title>
-		<link>https://darknessflowers.github.io/Portfolio-test/hello-world/#comment-1</link>
+		<link>https://darknessflowers.github.io/portfoliotest/hello-world/#comment-1</link>
 
 		<dc:creator><![CDATA[A WordPress Commenter]]></dc:creator>
 		<pubDate>Wed, 19 Aug 2020 07:37:31 +0000</pubDate>
-		<guid isPermaLink="false">http://darknessflowers.github.io/Portfolio-test/?p=1#comment-1</guid>
+		<guid isPermaLink="false">http://darknessflowers.github.io/portfoliotest/?p=1#comment-1</guid>
 
 					<description><![CDATA[Hi, this is a comment.
 To get started with moderating, editing, and deleting comments, please visit the Comments screen in the dashboard.
